--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.5.0</version>
                 <configuration>
                     <mainClass>com.ericsson.employeeapi.EmployeeApiApplication</mainClass>
                     <layout>JAR</layout>
